--- a/config.json
+++ b/config.json
@@ -1,6 +1,5 @@
 {
-	"token": "NzczMzM1MTgwMzgzMDkyNzM3.X6Hugg.G6ouh13ByPKYPuHo9_6gkt0NyRA",
-	"prefix": "MFR:",
-	"prefix2": "MFR: ",
-	"owner": "JustDante#1978"
+	"token": "redacted",
+	"prefix": "JAB:",
+	"owner": "redacted"
 }
