--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "discord.js": "^12.4.1",
-    "node": "^15.2.1"
+    "node": "^15.2.1",
+    "ytdl-core": "^4.0.5"
   }
 }
